# django-rest-auth-exam-todos

./: .gitignore  README.md  pyproject.toml
auth_exam/: admin.py  apps.py  models.py  test_client.py
auth_exam/api/: permissions.py  serializers.py  urls.py  views.py
auth_exam/migrations/: 0001_initial.py  0002_alter_user_date_of_birth.py  0003_todo.py  0004_alter_todo_due.py  0005_alter_todo_due.py  0006_alter_todo_due.py  0007_alter_todo_due.py  0008_alter_todo_due.py  0009_alter_todo_due.py  0010_alter_todo_due.py  0011_alter_todo_due.py  0012_alter_todo_due.py  0013_alter_todo_due.py  0014_alter_todo_due.py  0015_auto_20210730_1801.py  0016_alter_todo_due.py  0017_alter_todo_completed.py
django_rest/: settings.py  urls.py
